fix: images align

--- a/assets/css/_globals.scss
+++ b/assets/css/_globals.scss
@@ -15,5 +15,6 @@ body {
     font-family: Spline Sans, sans-serif;
     line-height: 1.7;
     color: #777;
+    background-color: var(--bs-primary-bg-subtle)!important;
 }
 
