--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -118,6 +118,56 @@ h1,h2,h3,h4,h5,h6{
     max-width: 100%;
 }
 
+#menu-item2 {
+    aspect-ratio: 1 / 1.33;
+    margin-bottom: 20px;
+}
+
+@media screen and (min-width: 500px){
+    #menu-item3 {
+        margin-bottom: 20px;
+    }
+}
+
+@media screen and (min-width: 1198px){
+    #menu-item3 {
+        margin-bottom: 1px;
+    }
+}
+
+/* (mobile first) If screen size is more than 600px wide, set the margin-bottom of <div> to 30px */
+@media screen and (min-width: 500px){
+    #menu-item4 {
+        aspect-ratio: 1 / 1.335;
+        margin-bottom: 20px;
+    }
+}
+
+@media screen and (min-width: 992px){
+    #menu-item4 {
+        aspect-ratio: 1 / 1.3;
+        margin-bottom: 1px;
+    }
+}
+
+#menu-item5 {
+    aspect-ratio: 1 / 1.3;
+}
+
+#menu-item6 {
+    aspect-ratio: 1 / 1.3;
+    margin-bottom: -6px;
+}
+
+#chili-honey{
+    aspect-ratio: 1 / 1;
+}
+
+#aioli {
+    aspect-ratio: 1 / 1;
+}
+
+
 .menu-item .stars {
     color: $primaryBackgroundColor;
 }
